--- a/css/mobile.less
+++ b/css/mobile.less
@@ -578,6 +578,14 @@ iframe {
 	/*text-align:center;
 	alignment-baseline:baseline;*/
 	/*min-width:350px;*/
+	
+	width: 460px;
+}
+
+.iframe-container {
+	height:0;
+	/* padding is relative to the width of the element */
+	padding-bottom:100%;	
 }
 
 .project_details_img.vid {
