--- a/css/480.less
+++ b/css/480.less
@@ -1192,8 +1192,8 @@ textarea {
 iframe {
 	
 	/*width:percentage(460/700);*/
-	width:225px;
-	height:160px;
+	/*width:225px;
+	height:160px;*/
 	
 }
 
