--- a/css/mobile.less
+++ b/css/mobile.less
@@ -579,13 +579,28 @@ iframe {
 	alignment-baseline:baseline;*/
 	/*min-width:350px;*/
 	
-	width: 460px;
+	/*width: 460px;*/
+	/*width:100%;	*/
 }
 
-.iframe-container {
-	height:0;
+.iFrame {
+	width:100%;
+	margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;	
+}
+
+.iframe-wrapper {
+	height: 0;
+	
 	/* padding is relative to the width of the element */
-	padding-bottom:100%;	
+	padding-bottom:56.25%;
+	
+	/*padding-bottom:100%;*/
+	
+    padding-top: 1px;
+    /*position: relative;	*/
 }
 
 .project_details_img.vid {
