--- a/css/mobile.less
+++ b/css/mobile.less
@@ -553,9 +553,8 @@ fieldset {
 	
 }
 
-
-
 /*** MOBILE FONTS ***/
+/*** END MOBILE FONTS ***/
 
 /* IMAGE SIZES */
 .project_details_img_large {
@@ -566,43 +565,11 @@ fieldset {
 	display:none;	
 }
 
-iframe {
-	
-	/*width:percentage(460/700);*/
-	/*width:300px;*/
-	/* margin-left:auto;
-	margin-right:auto;*/
-	/*height:268px;*/
-	/*align:middle;*/
-	
-	/*text-align:center;
-	alignment-baseline:baseline;*/
-	/*min-width:350px;*/
-	
-	/*width: 460px;*/
-	/*width:100%;	*/
+.no-border {
+	border:none;
 }
 
-.iFrame {
-	width:100%;
-	margin-bottom: 0;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 0;
-}
-
-.iframe-wrapper {
-	height: 0;
-	
-	/* padding is relative to the width of the element */
-	padding-bottom:56.25%;
-	
-	/*padding-bottom:100%;*/
-	
-    padding-top: 1px;
-    /*position: relative;	*/
-}
-
+/*** IFRAME ***/
 .project_details_img.vid {
 	/*width:100%;*/
 	/*float:right;*/
@@ -622,8 +589,49 @@ iframe {
 	/*border:none;*/
 }
 
-.no-border {
-	border:none;
+.iFrame {
+	width:100%;
+	/*margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;*/
+	
+	/*padding-bottom:100%;*/	
 }
+
+.iframe-wrapper {
+	height: 0;
+	
+	/* padding is relative to the width of the element */
+	padding-bottom:56.25%;
+	
+	/*padding-bottom:100%;*/
+	
+    padding-top: 1px;
+    /*position: relative;	*/
+}
+
+iframe {
+	
+	/*width:percentage(460/700);*/
+	/*width:300px;*/
+	/* margin-left:auto;
+	margin-right:auto;*/
+	/*height:268px;*/
+	/*align:middle;*/
+	
+	/*text-align:center;
+	alignment-baseline:baseline;*/
+	/*min-width:350px;*/
+	
+	/*width: 460px;*/
+	/*width:100%;	*/
+	
+	/*padding-bottom:56.25%;*/
+	
+	/*padding-bottom:100%;*/
+}
+
+/*** END IFRAME ***/
 
 
