made iframes responsive
made iframes responsive

--- a/css/480.less
+++ b/css/480.less
@@ -1188,20 +1188,9 @@ textarea {
 .project_details_img_small {
 	display:none;	
 }
+/* END IMAGE SIZES */
 
-iframe {
-	
-	/*width:percentage(460/700);*/
-	/*width:225px;
-	height:160px;*/
-	
-}
-
-.project_details_img.vid {
-	border:none;
-}
-
-.no-border {
+.project_details_img.no-border {
 	border:none;
 }
 
