--- a/css/mobile.less
+++ b/css/mobile.less
@@ -556,7 +556,7 @@ fieldset {
 /*** MOBILE FONTS ***/
 /*** END MOBILE FONTS ***/
 
-/* IMAGE SIZES */
+/* PROJECT_DETAILS */
 .project_details_img_large {
 	display:block;	
 }
@@ -569,69 +569,29 @@ fieldset {
 	border:none;
 }
 
-/*** IFRAME ***/
-.project_details_img.vid {
-	/*width:100%;*/
-	/*float:right;*/
-	/*width:percentage(460/700);*/
-	/*max-height:690px;*/
-	overflow:hidden;
-	/*border:2px solid black;*/
+.project_details_img.no-border {
 	border:none;
-	/*padding-right:percentage(10/700);*/
-	/*margin-right:percentage(10/700);*/
-	/*padding-left:10%;*/
-	text-align:center;
-	alignment-baseline:baseline;
 }
 
-.project_details_img.vid {
-	/*border:none;*/
-}
-
-.iFrame {
-	width:100%;
-	/*margin-bottom: 0;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 0;*/
-	
-	/*padding-bottom:100%;*/	
-}
-
+/*** IFRAME ***/
 .iframe-wrapper {
 	height: 0;
+	position: relative;	
 	
 	/* padding is relative to the width of the element */
+	/* The aspect ratio of 16:9, is expressed by 9/16 = 56.25% */
 	padding-bottom:56.25%;
 	
-	/*padding-bottom:100%;*/
-	
-    padding-top: 1px;
-    /*position: relative;	*/
+    /*padding-top: 1px;*/
 }
 
 iframe {
-	
-	/*width:percentage(460/700);*/
-	/*width:300px;*/
-	/* margin-left:auto;
-	margin-right:auto;*/
-	/*height:268px;*/
-	/*align:middle;*/
-	
-	/*text-align:center;
-	alignment-baseline:baseline;*/
-	/*min-width:350px;*/
-	
-	/*width: 460px;*/
-	/*width:100%;	*/
-	
-	/*padding-bottom:56.25%;*/
-	
-	/*padding-bottom:100%;*/
+	width:100%;	
+	height:100%;
+	position:absolute;
+	top:0;
+	left:0;
 }
-
 /*** END IFRAME ***/
 
 
