Add Giddy Throng

--- a/css/480.less
+++ b/css/480.less
@@ -714,8 +714,7 @@ h2.cover {
 	z-index:90;
 }
 
-#wa-ensemble {
-/*#giddy-throng {*/
+#giddy-throng {
 	.allCirclesMixin;
 	.circleMixin-140px;
 	
@@ -1081,8 +1080,15 @@ header#header-homeconnect {
 }
 
 header#header-giddy-throng {
-	/*background-image: url("../hcde419/images/wavelength-gold-on-green-3000x136px-outerglow.jpg");*/
 	height:110px;
+	background-image: url("../images/giddy-throng-logo-140829-450x56px.png");
+	background-repeat: no-repeat;
+	background-position:5px 50%;
+	display:block;
+}
+
+header#header-giddy-throng img{
+	display:none;
 }
 
 #header-giddy-throng h1 {
@@ -1194,4 +1200,12 @@ textarea {
 	border:none;
 }
 
+#play {
+	position:absolute;
+	z-index:100;	
+}
+
+#maru {
+	z-index:1;	
+}
 
