--- a/css/768.less
+++ b/css/768.less
@@ -145,10 +145,8 @@
 	}
 }
 		
-#wa-ensemble {
-
-/*#giddy-throng {
-*/	.circleMixin-210px;
+#giddy-throng {
+	.circleMixin-210px;
 	.stroke(3px, solid, #000);
 	
 	& h2.cover {
