Add Earthship Seattle

--- a/css/1080.less
+++ b/css/1080.less
@@ -18,7 +18,8 @@
 .project_details_trombone,
 .project_details_major_exploration,
 .project_details_homeconnect,
-.project_details_giddy_throng {
+.project_details_giddy_throng,
+.project_details_earthship_seattle {
 	.projectDetails1080;
 }
 
@@ -36,7 +37,8 @@
 #page-trombone #nav-sub-trombone,
 #page-major-exploration #nav-sub-major-exploration,
 #page-homeconnect #nav-sub-homeconnect,
-#page-giddy-throng #nav-sub-giddy-throng {
+#page-giddy-throng #nav-sub-giddy-throng,
+#page-earthship-seattle #nav-sub-earthship-seattle {
 	font-size: 1.3em;
 	line-height:1.4em;
 }
