--- a/css/768.less
+++ b/css/768.less
@@ -158,14 +158,14 @@
 	}		
 }
 			
-#husky-health {
+#earthship-seattle {
 	.circleMixin-210px;
 	.stroke(3px, solid, #000);
 	
 	& h2.cover {
 		font-size:26px;
 		margin-left:4px;
-		margin-top:83px;
+		margin-top:35%;
 		/*color:red;*/
 		/*text-align:center;*/
 	}		
@@ -206,7 +206,8 @@
 .project_details_trombone,
 .project_details_major_exploration,
 .project_details_homeconnect,
-.project_details_giddy_throng {
+.project_details_giddy_throng,
+.project_details_earthship_seattle {
 	.projectDetails768;
 }
 
@@ -224,7 +225,8 @@
 #page-trombone #nav-sub-trombone,
 #page-major-exploration #nav-sub-major-exploration,
 #page-homeconnect #nav-sub-homeconnect,
-#page-giddy-throng #nav-sub-giddy-throng {
+#page-giddy-throng #nav-sub-giddy-throng,
+#page-earthship-seattle #nav-sub-earthship-seattle {
 	font-size: 1.1em;
 	line-height: 1.5; /* 24px / 16 px */
 }
