--- a/css/mobile.less
+++ b/css/mobile.less
@@ -261,8 +261,14 @@ header#header-major-exploration img {
 
 #project8{}
 
-#husky-health {
+#earthship-seattle {
  .mobileProjectMixin;
+ 
+ h2 {
+	font-family:"PT Mono"; 
+	font-size:1.5em;
+	padding-top:10px;
+ }
 }
 
 #project9{}
@@ -347,7 +353,8 @@ header#header-giddy-throng img {
 #content-area-trombone,
 #content-area-major-exploration,
 #content-area-homeconnect,
-#content-area-giddy-throng {
+#content-area-giddy-throng,
+#content-area-earthship-seattle {
 	width:96%;
 	/*border: 3px solid grey;*/
 	margin-left:auto;
@@ -361,7 +368,8 @@ header#header-giddy-throng img {
 .project_details_trombone,
 .project_details_major_exploration,
 .project_details_homeconnect,
-.project_details_giddy_throng {
+.project_details_giddy_throng,
+.project_details_earthship_seattle {
 	.projectDetailsMobile;
 }
 
@@ -482,7 +490,8 @@ nav a:hover {
 #nav-sub-trombone,
 #nav-sub-major-exploration,
 #nav-sub-homeconnect,
-#nav-sub-giddy-throng {
+#nav-sub-giddy-throng,
+#nav-sub-earthship-seattle {
 	.nav-sub-mixin;		
 }
 
@@ -492,7 +501,8 @@ nav a:hover {
 #nav-collapse-trombone,
 #nav-collapse-major-exploration,
 #nav-collapse-homeconnect,
-#nav-collapse-giddy-throng  {	
+#nav-collapse-giddy-throng,
+#nav-collapse-earthship-seattle  {	
 	.nav-collapse-mixin;
 }
 
