--- a/css/1080.less
+++ b/css/1080.less
@@ -42,3 +42,11 @@
 	font-size: 1.3em;
 	line-height:1.4em;
 }
+
+/*.page-body {
+	background-image: url("../images/bg-980px-grid.png");
+	background-repeat:no-repeat;
+	background-position:center;
+	background-repeat:repeat-y;
+	max-width:940px;
+}*/
