--- a/css/768.less
+++ b/css/768.less
@@ -110,7 +110,7 @@
 	
 	& h2.cover {
 		font-size:20px;
-		margin-left:4px;
+		margin-left:7%;
 		margin-top:88px;
 		/*text-align:center;*/
 	}	
@@ -122,7 +122,7 @@
 	
 	& h2.cover {
 		font-size:23px;
-		margin-left:4px;
+		margin-left:10%;
 		margin-top:85px;
 		/*color:#FFF;*/
 		/*text-align:center;*/
@@ -135,7 +135,7 @@
 	
 	& h2.cover {
 		font-size:18px;
-		margin-left:4px;
+		margin-left:12.5%;
 		margin-top:90px;
 		/*color:#BE5C6C;*/
 		/*color:darkred;*/
@@ -165,7 +165,7 @@
 	& h2.cover {
 		font-size:26px;
 		margin-left:4px;
-		margin-top:35%;
+		margin-top:30%;
 		/*color:red;*/
 		/*text-align:center;*/
 	}		
@@ -177,7 +177,7 @@
 	
 	& h2.cover {
 		font-size:26px;
-		margin-left:3px;
+		margin-left:16%;
 		margin-top:65px;
 		/*color:red;*/
 		/*text-align:center;*/
@@ -194,9 +194,16 @@
 	display:none;	
 }
 
+
+
 .projectDetails768 {
    & .project_details_p { 
 		font-size:.8em;
+	}
+	
+   & .project_details_img {
+	float:right;
+	margin-right:0;	
 	}
 }
 
