--- a/css/480.less
+++ b/css/480.less
@@ -35,10 +35,7 @@
 
 .projectDetailsTablet {
 	& h1 {
-		font-size:150%;
-		padding-bottom:2%;
-		/*padding-top:1.5%;*/	
-		padding-top:.5%;
+		padding-bottom:25px;
 	}
 	& img {
 		/*border:2px solid grey;*/
@@ -49,17 +46,18 @@
 	}
 	& p { /* each paragraph */
 		margin-bottom:.4em;
-		margin-right:percentage(10/700);
+		/*margin-right:percentage(10/700);*/
 		float:left;
-		padding:0 2% 2% 1%;	
+		padding:0 2% 2% 0%;	
 		overflow:hidden;
 	}
 	/* all paragraphs as a group in project_details */
 	& .project_details_p { 
 		width:percentage(220/700);
+		/*max-width:220px;*/
 		float:left;		
 		padding-top:0;
-		padding-right:percentage(10/700);
+		/*padding-right:percentage(10/700);*/
 		padding-bottom:0;
 		padding-left:0;
 		font-size:.65em;
@@ -81,8 +79,9 @@
 	/* div contining the image */
 	& .project_details_img {
 		/*width:100%;*/
-		/*float:right;*/
+		float:right;
 		width:percentage(460/700);
+		/*max-width:460px;*/
 		/*max-height:690px;*/
 		overflow:hidden;
 		border:2px solid grey;
@@ -100,6 +99,7 @@
 
 .verticalMenuMixin-White {
 	width:23.40425532%; /* 220/940 */
+	/*max-width:220px;*/
 	float:left;	
 	color:#000;
 	background-color:#FFF;
@@ -334,8 +334,16 @@ nav ul li {
 	font-size:1.1em;  
 }
 
-nav a {
+nav a:link,
+nav a:visited {
 	text-decoration:none;
+	color:black;
+	border-bottom: none;
+}
+
+nav a:hover,
+nav a:focus {
+	text-decoration:underline;
 	color:black;
 }
 
@@ -347,14 +355,9 @@ nav li a {
 	padding-bottom:2px;
 }
 
-nav a:hover {
-	text-decoration:underline;
-	color:black;
-}
-
-a.selected {
+/*nav a.selected {
 	color:magenta;	
-}
+}*/
 /*** END ONE-PAGE NAV MAIN CONTROLS ***/
 
 /*** GLOBAL TABLET NAV ***/
@@ -648,7 +651,7 @@ h2.cover {
 	
 	& h2.cover {
 		font-size:13px;
-		margin-left:3px;
+		margin-left:8%;
 		margin-top:59px;
 		color:#B5A642;
 		text-align:center;
@@ -677,7 +680,7 @@ h2.cover {
 	
 	& h2.cover {
 		font-size:15px;
-		margin-left:3px;
+		margin-left:11%;
 		margin-top:56px;
 		color:#FFF;
 		text-align:center;
@@ -700,7 +703,7 @@ h2.cover {
 	
 	& h2.cover {
 		font-size:12px;
-		margin-left:3px;
+		margin-left:13%;
 		margin-top:60px;
 		color:red;
 		text-align:center;
@@ -745,11 +748,10 @@ h2.cover {
  	& h2.cover {
 		font-family:"PT Mono";
 		font-size:18px;
-		margin-left:3px;
-		margin-top:50px;
+		margin-left:0;
+		margin-top:38px;
 		color:#FFF;
 		text-align:center;
-		
 		text-shadow: 0px 0px 5px #000;
 	}
 }
@@ -769,10 +771,12 @@ h2.cover {
 	
  	& h2.cover {
 		font-size:18px;
-		margin-left:3px;
-		margin-top:35px;
-		color:red;
+		margin-left:15%;
+		margin-top:45px;
+		color:#FFF;
 		text-align:center;
+		text-shadow: 0px 0px 5px #000;
+		
 	}
 }
 
@@ -1000,17 +1004,6 @@ header#header-trombone {
 	/*height:110px;*/	
 	/*-webkit-text-stroke: 1px pink;
 	text-stroke: 1px pink;*/
-}
-
-#header-trombone h1 {		
-	/*color: pink;*/
-   /*-webkit-text-fill-color: white;*/ /* Will override color (regardless of order) */
-  /* -webkit-text-stroke-width: 1px;
-   -webkit-text-stroke-color: pink;	*/
-   display:block;
-   font-size:3em;
-   color:#B5A642;
-   /*color:#FFF81F;*/
 }
 
 /* TROMBONE NAV 480 px and larger */
