--- a/css/1080.less
+++ b/css/1080.less
@@ -23,13 +23,13 @@
 	.projectDetails1080;
 }
 
-.long-text {
+/*.long-text {
 	font-size:0.75em;
-}
+}*/
 
-.long-text h1 {
+/*.long-text h1 {
 	font-size:2em;	
-}
+}*/
 
 #page-nan #nav-sub-nan,
 #page-mark #nav-sub-mark,
