--- a/css/768.less
+++ b/css/768.less
@@ -219,12 +219,12 @@
 }
 
 .long-text {
-	font-size:0.8em;
+	font-size:0.85em;
 }
 
-.long-text h1 {
+/*.long-text h1 {
 	font-size:2.25em;	
-}
+}*/
 
 #page-nan #nav-sub-nan,
 #page-mark #nav-sub-mark,
