--- a/css/1080.less
+++ b/css/1080.less
@@ -1,3 +1,44 @@
+.page-body,
+#page-contact,
+#home-page-container,
+#page-projects {
+	background-image: url("../images/grid-1280x15-.jpg");
+	/*background-image: url("../images/bg-980px-grid-.png");*/
+	background-repeat:no-repeat;
+	background-position:center;
+	background-repeat:repeat-y;
+	/*max-width:980px;*/
+}
+
+/*** HOME PAGE ***/
+.home-page-container {
+	margin-bottom:75px;	
+}
+
+.header-main {	
+	margin-bottom:75px;
+}
+
+.contact-icons {
+	float:right;
+	width:130px;
+}
+
+i.icon-email,
+i.icon-linkedin {
+	font-size:60px;
+}
+
+.header-main p {	
+	font-size:3em;
+}
+
+.max1260px {
+	max-width:1260px;
+	margin:auto;	
+}
+/*** END HOME PAGE ***/
+
 .project_details_img_large {
 	display:none;	
 }
@@ -42,11 +83,3 @@
 	font-size: 1.3em;
 	line-height:1.4em;
 }
-
-/*.page-body {
-	background-image: url("../images/bg-980px-grid.png");
-	background-repeat:no-repeat;
-	background-position:center;
-	background-repeat:repeat-y;
-	max-width:940px;
-}*/
