--- a/css/768.less
+++ b/css/768.less
@@ -1,3 +1,39 @@
+/*.page {
+	background-image: url("../images/bg-800px-grid-.png");
+	background-repeat:no-repeat;
+	background-position:center;
+	background-repeat:repeat-y;
+}*/
+
+/*** HOME PAGE ***/
+.home-page-container {
+	margin-bottom:50px;	
+}
+
+.contact-icons {
+	float: right;
+	width: 110px;
+	position: relative; /* positions relative to normal position */
+	top:20px;
+	margin-top:0;
+}
+
+i.icon-email,
+i.icon-linkedin {
+	font-size:50px;	
+}
+
+.header-main p {
+	width:300px;	
+	font-size:2.5em;
+}
+
+.header-main {	
+	margin-bottom:50px;
+}
+
+/*** END HOME PAGE ***/
+
 /* MIXINS */
 .circleMixin-210px {
 	-moz-border-radius:50%;
@@ -19,7 +55,6 @@
 	overflow:hidden;
 }
 /* END FUNCTIONS */
-
 
 /* CIRCLE BEHAVIORS */
 .mobile-rectangle,
@@ -194,8 +229,6 @@
 	display:none;	
 }
 
-
-
 .projectDetails768 {
    & .project_details_p { 
 		font-size:.8em;
@@ -237,3 +270,9 @@
 	font-size: 1.1em;
 	line-height: 1.5; /* 24px / 16 px */
 }
+
+/*** CONTACT FORM ***/
+#contact-form p label {
+	font-size:1em;
+}
+/*** END CONTACT FORM ***/
