--- a/css/480.less
+++ b/css/480.less
@@ -190,6 +190,14 @@ h2 {
 		margin-left:.5em;
 		list-style-type:none;	
 	}
+	
+	// & li .selected-item { 
+	
+	/*** ACTIVE STATE ***/
+	& .selected-item { 
+	  color: #333;
+          text-decoration: underline;
+	}
 }
 /*** END MIXINS ***/
 
@@ -815,25 +823,6 @@ h2.cover {
 #nav-sub-nan {
 	.verticalMenuMixin-White;
 }
-
-/*.nan_aia,
-.nan_ia,
-.nan_c1,
-.nan_c2,
-.nan_c3,
-.nan_c4,
-.nan_t1,
-.nan_t2,
-.nan_protosite {
-	text-decoration:underline;	
-	
-}*/
-
-#nav-sub-nan li.main-on a {
-	font-weight:bold;
-	text-decoration:underline;	
-}
-/* END NAN NAV - 480 px + */
 /*** END NAN PAGE ***/
 
 /*** reCREATE PAGE ***/
@@ -854,8 +843,7 @@ h2.cover {
 header#reCreate {
 	overflow:hidden;
 	margin-top:0;
-	background-color:@reCreate-Blue;
-	
+	background-color:@reCreate-Blue;	
 	/*background-image:url("images/tfleischauer-web202-a11-logo-441x110.png");*/
 }
 
@@ -866,56 +854,43 @@ header#reCreate img {
 /* NAV RECREATE - 480px and larger */
 #nav-sub-recreate {
 	.verticalMenuMixin-White;
-}
+	
+	& ul {
+		background-color: @reCreate-Blue;	
+		border-bottom: 1px solid tint(@reCreate-TreeColor, 50%);
+	}
+	
+	& li {
+		border-top: 1px solid tint(@reCreate-TreeColor, 50%);
+	}
+	
+	& li a {
+		text-decoration: none;
+		color:@reCreate-TreeColor;
+	}
 
-#nav-sub-recreate ul {
-	background-color: tint(@reCreate-Blue, 50%);
-	/*border-bottom: 1px solid lighten(@reCreate-Almost-Black, 10%);*/
-	border-bottom: 1px solid tint(@reCreate-TreeColor, 70%);
-}
+	& li a:hover {	/* use full descendent selector! */
+		background-color:#FFF;
+		color:@reCreate-TreeColor;
+	}
+	
+	& li a:focus {
 
-#nav-sub-recreate li {
-	border-top: 1px solid tint(@reCreate-TreeColor, 70%);
-}
+	}
+	
+	& li a:active {
+		border-bottom: none;
+	}
+	
+	& ul li ul {
+		background-color:#FFF;
+	}
+	
+	& ul li ul:last-child {
+		border-bottom: none;
+	}
 
-#nav-sub-recreate li a {
-	text-decoration: none;
-	/*border-left: 1.25em solid @reCreate-TreeColor;*/	/* 20px / 16px  */
-	color:@reCreate-TreeColor;
 }
-
-#nav-sub-recreate li a:hover {		/* use full descendent selector! */
-	background-color:@reCreate-Blue;
-	/*border-left: solid 1.25em #666;	*/	/* 20px / 16px */
-	color: #FFF;
-}
-
-#nav-sub-recreate li a:focus {		/* use full descendent selector! */
-	background-color:@reCreate-TreeColor;
-	color: #FFF;
-}
-
-#nav-sub-recreate li a:active {
-	border-bottom:none;
-	background-color:@reCreate-TreeColor;
-}
-
-#nav-sub-recreate ul li ul {
-	background-color:#FFF;
-}
-
-#nav-sub-recreate ul li ul:last-child {
-	border-bottom: none;
-}
-
-/*#re-create h2.cover {
-	color:#000;
-	margin-left:30%;
-	margin-top:9%;
-	font-size:1em;
-	font-family: "Myriad Pro", "PT Sans", sans-serif;
-	overflow:hidden;		
-}*/
 /* END NAV RECREATE - 480px and larger */
 /*** END reCREATE PAGE ***/
 
