--- a/css/480.less
+++ b/css/480.less
@@ -258,8 +258,14 @@ i.icon-linkedin {
 	width:100%;
 	height:100%;
 	top:0;
-	left:0;		
+	left:0;	
 }
+
+/*.page {
+	position:relative;
+	min-height:100%;
+	margin-bottom: 3em;
+}*/
 
 nav {
 	position:fixed;
@@ -283,7 +289,7 @@ nav {
 
 nav ul {
 	list-style-type:none;
-	width:320px;
+	width:500px;
 	/*width:23%;*/
 	margin:auto;
 	/*padding:10px 0;	*/
@@ -303,8 +309,8 @@ nav ul li {
 	float: left;
 	padding-top: 0;
 	/*padding-right: 20px;*/
-    /*padding-bottom: 0;*/
-    /*padding-left: 20px;*/
+	/*padding-bottom: 0;*/
+	/*padding-left: 20px;*/
 	background-color:rgba(255,255,255,0.9);
 	font-size:1.1em;  
 }
@@ -378,8 +384,9 @@ nav li a {
 
 .home-page-text {
 	max-width:500px;
-	margin:auto;
-	padding:0 20px;	
+	// margin:auto;
+	// padding:0 20px;
+	padding:0 20px 0 0;
 }
 
 /*** END HOME PAGE ***/
@@ -390,11 +397,14 @@ nav li a {
 /* THE PAGE ITSELF */
 #page-projects {
 	top:100%;
+	height:100%;
+	// height: 900px;
 	/*background:#00BFFF;*/
 	visibility:visible;
 	/*max-width:940px;
 	width:100%;*/
 	margin:auto;	
+
 }
 
 /* CIRCLE BEHAVIORS */
