--- a/css/mobile.less
+++ b/css/mobile.less
@@ -97,6 +97,19 @@ ul li ul {
 }
 /* END RAVEN'S VERTICAL LISTS */
 
+.page {
+	// position:absolute;
+	// width:100%;
+	height:100%;
+	top:0;
+	left:0;	
+	margin-bottom:100px;
+}
+
+home-page-container {
+
+}
+
 /*** END GLOBAL SELECTORS ***/
 
 /* VARIABLES */
@@ -162,7 +175,8 @@ ul li ul {
 /*** HOME PAGE ***/
 #home-page-container {
 	width:100%;
-	margin:auto;		
+	margin:auto;
+	margin-bottom:100px;		
 }
 
 .header-main {
@@ -214,6 +228,10 @@ i.icon-linkedin {
 
 .home-page-text {
 	padding:0 10px;	
+}
+
+.home-page-text p:last-child {
+	padding-top:.375em;	
 }
 
 .home-page-text h2 {
@@ -457,7 +475,7 @@ nav {
 
 nav ul {
 	list-style-type:none;
-	width:280px;
+	width:320px;
 	margin:auto;
 	/*padding:1% 0;*/
 	/*padding-bottom:3%;
@@ -470,7 +488,7 @@ nav ul li {
 	/*padding-right:1%;*/
 	/*padding-right:5px;*/
 	/*padding-left:5px;*/
-	font-size:1.1em;
+	font-size:.85em;
 	/*padding-bottom:1%;
 	padding-top:1%;*/
 	/*padding-bottom: 0;*/ /* removes global style */
@@ -484,10 +502,10 @@ nav li a {
 	padding-bottom:5px;
 }
 
-/*nav a {
-	text-decoration:none;
-	color:#FFF;
-}*/
+li .scroll {
+	border-bottom: none;
+	color: #FFF;
+}
 
 nav a:link,
 nav a:visited {
@@ -500,6 +518,8 @@ nav a:hover,
 nav a:focus {
 	text-decoration:underline;
 }
+
+
 
 /*** COLLAPSE NAVS ***/
 .nav-sub-mixin {
@@ -529,6 +549,7 @@ nav a:focus {
 	  color: #FFF;
 	  text-decoration:underline;
 	}
+
 }
 
 .nav-collapse-mixin {
