mobile | page min-height:100vh;

--- a/css/480.less
+++ b/css/480.less
@@ -259,6 +259,8 @@ i.icon-linkedin {
 	height:100%;
 	top:0;
 	left:0;	
+
+	// min-height: 100vh;
 }
 
 // Thomas - makes pages stack instead of height: 100%
