--- a/css/mobile.less
+++ b/css/mobile.less
@@ -98,16 +98,11 @@ ul li ul {
 /* END RAVEN'S VERTICAL LISTS */
 
 .page {
-	// position:absolute;
-	// width:100%;
 	height:100%;
 	top:0;
 	left:0;	
-	margin-bottom:100px;
-}
 
-home-page-container {
-
+	min-height: 100vh;
 }
 
 /*** END GLOBAL SELECTORS ***/
@@ -176,7 +171,7 @@ home-page-container {
 #home-page-container {
 	width:100%;
 	margin:auto;
-	margin-bottom:100px;		
+	// margin-bottom:100px;		
 }
 
 .header-main {
