--- a/css/mobile.less
+++ b/css/mobile.less
@@ -45,8 +45,19 @@ a:visited {
 /*  border instead of an underline, 
 underlines are notoriously inflexible. */
 
-a:hover,
+a:hover {
+	border-bottom: 1px solid #333;
+	text-decoration: none;
+	border-bottom-color: #333;
+}
+
 a:focus {
+	border-bottom: 1px solid #333;
+	text-decoration: none;
+	border-bottom-color: #333;
+}
+
+a:active {
 	border-bottom: 1px solid #333;
 	text-decoration: none;
 	border-bottom-color: #333;
@@ -489,19 +500,22 @@ nav ul li {
 	/*padding-bottom: 0;*/ /* removes global style */
 }
 
+li .scroll {
+	border-bottom: none;
+	color: #FFF;
+}
+
+// a is any link (including ones w/o an href)
 nav li a {
 	display:block;
 	padding-left:15px;
 	padding-right:15px;
 	padding-top:5px;	
 	padding-bottom:5px;
+	cursor: pointer;
 }
 
-li .scroll {
-	border-bottom: none;
-	color: #FFF;
-}
-
+// a:link is a link with an href
 nav a:link,
 nav a:visited {
 	text-decoration:none;
@@ -513,8 +527,6 @@ nav a:hover,
 nav a:focus {
 	text-decoration:underline;
 }
-
-
 
 /*** COLLAPSE NAVS ***/
 .nav-sub-mixin {
